# serializer version: 1
# name: test_domain_pack_unpack[1-OptIntM-None]
  1
# ---
# name: test_domain_pack_unpack[1-RetryTimesM-None]
  1
# ---
# name: test_domain_pack_unpack[1.0-OptFloatM-None]
  1.0
# ---
# name: test_domain_pack_unpack[1.0-TimeoutM-None]
  1.0
# ---
# name: test_domain_pack_unpack[CursorStyle.BLINKING_UNDERSCORE-CursorStyleM-None]
  3
# ---
# name: test_domain_pack_unpack[None-OptBytesM-None]
  list([
  ])
# ---
# name: test_domain_pack_unpack[None-OptFloatM-None]
  -1.0
# ---
# name: test_domain_pack_unpack[None-OptIntM-None]
  -1
# ---
# name: test_domain_pack_unpack[None-RetryTimesM-None]
  -1
# ---
# name: test_domain_pack_unpack[None-TimeoutM-None]
  -1.0
# ---
# name: test_domain_pack_unpack[entity11-ConfigM-None]
  tuple(
    '/etc/crystalfontz.yaml',
    '/dev/ttyUSB1',
    'CFA533',
    'h1.4',
    'u1v2',
    115200,
    0.25,
    1,
  )
# ---
# name: test_domain_pack_unpack[hello-BytesM-None]
  list([
    104,
    101,
    108,
    108,
    111,
  ])
# ---
# name: test_domain_pack_unpack[hello-OptBytesM-None]
  list([
    104,
    101,
    108,
    108,
    111,
  ])
# ---
# name: test_domain_unpack_pack[115200-BaudRateM]
  115200
# ---
# name: test_domain_unpack_pack[19200-BaudRateM]
  19200
# ---
# name: test_domain_unpack_pack[packed0-OptBytesM]
  None
# ---
# name: test_domain_unpack_pack[packed1-AtxPowerSwitchFunctionalitySettingsM]
  Functions enabled: KEYPAD_RESET
  Auto-Polarity Enabled: no
  Reset Inverted: yes
  Power Inverted: yes
  Power Pulse Length (seconds): 1.0
# ---
